--- a/sob4.html
+++ b/sob4.html
@@ -1,74 +1,149 @@
 <!DOCTYPE html>
 <head>
-  <title>Footer Design</title>
+  <title>Sob4</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="sob4.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
-	<div class="box-area">
-		<header>
-			<div class="wrapper">
-				<div class="logo">
-					<a href="#"><img src="logo.png" alt=""></a>
-				</div>
-				<nav>
-                    <a href="#">Главная</a>
-					<a href="#">О нас</a>
-					<a href="#">События</a>
-                     <a href="#">Контакты</a>
-                      <a href="#">Галерея</a>
-                       <a href="#">Языки</a>
-                        <a href="#">FAQ</a>
-				</nav>
-			</div>
-		</header>
+ <header>
+		<div class="menu">
+		<a href="#"><img src="logo.png" alt="" class="logo_for_menu"></a>
+		<ul>
+			<li><a href="#">Главная</a></li>
+			<li><a href="#">О нас</a></li>
+			<li><a href="#">ЧаВо</a></li>
+			<li><a href="#">Галерея</a></li>
+			<li><a href="contacts_ru.html">Контакты</a></li>
+			<li><a href="#">События</a></li>
+			<li><div class="dropdown">
+           <button class="dropbtn">Языки</button>
+             <div class="dropdown-content">
+               <a href="#">Украинский</a>
+               <a href="#">Русский</a>
+               <a href="#">Английский</a>
+			   <a href="#">Французский</a>
+			   <a href="#">Китайский</a>
+             </div>
+         </div>
+		 </li>
+         
 		
-<footer class="footer">
-  	 <div class="container">
-  	 	<div class="row">
-  	 		<div class="footer-col">
-  	 			<h4>Помощь</h4>
-  	 			<ul>
-  	 				<li><a href="#">Помогать нам ежемесячно</a></li>
-  	 				<li><a href="#">Продукты для стареньких</a></li>
-  	 				<li><a href="#">Средтсва гигиены</a></li>
-  	 				<li><a href="#">Волонтерство</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>Меню</h4>
-  	 			<ul>
-  	 				<li><a href="#">Главная</a></li>
-  	 				<li><a href="#">О нас</a></li>
-  	 				<li><a href="#">FAQ</a></li>
-  	 				<li><a href="#">Галерея</a></li>
-  	 				<li><a href="#">Контакты</a></li>
-					<li><a href="#">События</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>Контакты и адресс</h4>
-  	 			<ul>
-  	 				<li><a href="#">Украина, Киев</a></li>
-  	 				<li><a href="#">Улица Мельникова 12</a></li>
-  	 				<li><a href="#">help@starenki.com.ua</a></li>
-  	 				
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>Следите за нами</h4>
-  	 			<div class="social-links">
-  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
-  	 				<a href="#"><i class="fab fa-youtube"></i></a>
-  	 				<a href="#"><i class="fab fa-instagram"></i></a>
-  	 				<a href="#"><i class="fab fa-telegram"></i></a>
-  	 			</div>
-  	 		</div>
-  	 	</div>
-  	 </div>
-  </footer>
+	</div>
+		</header>
+<main>
+<p><img src="photo/sob4-1.png" alt="" width="100%" height="640"></p>
+<p><img src="photo/sob4-2.png" alt="" width="100%" height="640"></p>
+<p><img src="photo/sob4-3.png" alt="" width="100%" height="640"></p>
+<p><img src="photo/sob4-4.png" alt="" width="100%" height="640"></p>
+<p><img src="photo/sob4-5.png" alt="" width="100%" height="640"></p>
+<p><img src="photo/sob4-6.png" alt="" width="100%" height="640"></p>
+<p><img src="photo/sob4-7.png" alt="" width="100%" height="640"></p>
+<div class="secret">#подсказка:событие 3</div>
+</main>		
+ <footer>
+   	<div class="block_img">
+   		<img src="foto/logo/logo_2.png">
+   	</div>
+   	<div class="text">
+   		<div class="block_menu">
+   			 <ul>
+	   			<li><a href="#" class="help">Помощь</a></li>
+	   			<li><a href="#">Меню</a></li>
+	   			<li><a href="#" class="contacts">Контакты и Адрес</a></li>
+	   			<li><a href="#">Языки</a></li>
+   		   </ul>
+   		</div>
+         <div class="block_for_help">
+	   		<ul>
+	   			<li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Поддерживать Проект Единоразово</a></li>
+	   			<li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Поддерживать Проект Ежемесячно</a></li>
+	   			<li><a href="https://www.liqpay.ua/ru/checkout/card/checkout_1614785710317579_25999827_ulBLvXEP18fmGAPB3L9O">Ежемесячно</a></li>
+	   			<li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1614789926388289_27504595_ELuy3csixHjQaW0bdJnW">Продукты для стареньких единоразово</a></li>
+	   			<li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1614789939402548_27898498_9vFQUfl1BT1BQE985Fcj">Продукты для стареньких ежемесячно</a></li>
+	   			<li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1614785779453560_16405666_hcCWtKg8dfcJCsHTWC3F">Средство гигиены</a></li>
+	   			<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScAZ0onNui_KC1iSFcEhxrI2ab4CGLouW9S7wab5WzkmRqS3A/viewform">Волонтерство</a></li>
+	   		</ul>
+   		</div>
+         <div class="block_for_menu">
+	   		<ul>
+	   			<li><a href="">Главная</a></li>
+	   			<li><a href="">О нас</a></li>
+	   			<li><a href="">ЧаВо</a></li>
+	   			<li><a href="">Галерея</a></li>
+	   			<li><a href="contacts_ru.html">Контакты</a></li>
+	   			<li><a href="">События</a></li>
+	   		</ul>
+         </div>
+   		<div class="block_for_adress">
+   			<p class="adress">Украина, Киев, ул. Мельникова, 12</p>
+   			<p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
+   			<div class="block_with_img_link">
+   				<a href="https://www.instagram.com/starenki.help/"><img src="foto/end/instagram_1.png" class="instagram"></a>
+   				<a href="https://www.facebook.com/starenki/"><img src="foto/end/facebook_1.png" class="facebook"></a>
+   				<a href="https://t.me/starenki"><img src="foto/end/telega_1.png" class="telega"></a>
+
+               <div class="gmail_youtube">
+               	<a href="mailto:help@starenki.com.ua"><img src="foto/end/gamail_1.png" class="gmail"></a>
+   				   <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="foto/end/youtube_1.png" class="youtube"></a>
+               </div>
+   			</div>
+   			<div class="block_with_img">
+   				<div  class="Uk">
+   					<a href=""><img src="foto/флаги/Ukraine.png" class="uk"></a>
+   				</div>
+   				<div class="Ra">
+   					<a href="contacts_ru.html"><img src="foto/флаги/rassin.png" class="ra"></a>
+   				</div>
+   				<div class="Usa">
+   					<a href=""><img src="foto/флаги/usa.jpg" class="usa"></a>
+   				</div>
+   				<div class="Fr">
+   					<a href=""><img src="foto/флаги/farance.jpg" class="fr"></a>
+   				</div>
+   				<div class="Ch">
+   					<a href=""><img src="foto/флаги/China.jpg" class="ch"></a>
+   				</div>
+   			</div>
+   		</div>
+   	</div>
+	   <div class="line_1"></div>
+		<div class="line_2"></div>
+	 	<div class="line_3"></div>
+	   <div class="line_4"></div>
+	   <div class="block_about_cite">
+	   	<p><strong>Создатели сайта:</strong></p>
+	   	<div class="insta">
+	   		<a href="https://www.instagram.com/cheater666_programist/">
+	   			<img src="foto/end/instagram_black.png">
+	   		</a>
+	   	</div>
+	   	<div class="telega_oleksandr">
+	   		<a href="https://web.telegram.org/#/im?p=@oleksandr">
+	   			<img src="foto/end/telega_black.png">
+	   		</a>
+	   	</div>
+	   	<div class="telega_Aahzmandiuss">
+	   		<a href="https://web.telegram.org/#/im?p=@Aahzmandiuss">
+	   			<img src="foto/end/telega_black.png">
+	   		</a>
+	   	</div>
+	   	<div class="telega_Dana">
+	   		<a href="https://web.telegram.org/#/im?p=u854258987_4383190150680909201">
+	   			<img src="foto/end/telega_black.png">
+	   		</a>
+	   	</div>
+	   </div>
+	   <div class="arrow">
+	   	<a href="">
+	   		<img src="foto/декор/стрелочка.png">
+	   	</a>
+	   </div>
+   </footer>
+	<script src="evenement_3.js"></script>
+</body>
+</html>
 </body>
 </html>
