--- a/Sasha/index.html
+++ b/Sasha/index.html
@@ -72,14 +72,16 @@
       <img src="./photo/sport4.jpg">
       <img src="./photo/sport4.jpg">
     </div>
-    <div>
-      <p classs="text3">
+
+      <p class="text31">
         Было собрано 1750 гривен и деньги уже перечислены в проект! Мы благодарим всех, кто пришел, узнал о нас немного, поспрашивал после тренировки. И благодарим Елена, ее мужа Сергея и Александра Асланова за эту возможность — быть здоровыми и помогать!
-        <p> Больше фото смотрите на странице мероприятия</p>
+    </p>
+      <a class="page" href="***" >Больше фото смотрите на странице мероприятия</a>
     </div>
     </div>
-  
+    </div>
 </div>
+
 
 <!--конец-->
 <footer>
