--- a/Sasha/index.html
+++ b/Sasha/index.html
@@ -43,11 +43,15 @@
     </nav>
   </div>
 <!--Cont-->
+</div>
 <div class="container">
 <div class="content1">
-<div class="sport1">
-  <img src="./photo/sport.jpg">
-</div>
+  <div class="card image-relative">
+    <img class="image" src="./photo/sport1.jpg">
+    <div class="overlay">
+    <h2>TextTextTextTextTextText</h2>
+    </div>
+    </div>
 <div class="text1">
   <p>В случае с благотворительными тренировками (и вообще с любыми активностями в пользу проекта), концепция win-win самая честная.
     Вы получаете качественную услугу, за которую и так заплатили бы деньги, но в данном случае эти деньги пойдут еще и на хорошее дело: мы закупим продукты для старичков, которым приходится сейчас сложно.
@@ -57,22 +61,26 @@
 </div>
 </div>
 <div class="content2">
-  <div class="sport2">
-      <img src="./photo/sport2.jpg">
-    <img src="./photo/sport3.jpg">
+  <div class="card image-relative"></div>
+  <img class="image" src="./photo/sport2.jpg">
+  <img class="image" src="./photo/sport3.jpg">
+  <div class="overlay">
+  <h2>TextTextTextTextTextText</h2>
+  </div>
   </div>
   <div class="text2"><p > 
     Тренировки для нас — очень особенное направление. Ведь все наши старички утверждают, что дожили до глубокой старости в том числе благодаря спорту или активному образу жизни. Поэтому философия спортивных активностей — очень сочетается с нашей миссией.
       </p>
     </div>
-  
   </div>
   <div class="content3">
-    <div class="sport3">
-        <img src="./photo/sport4.jpg">
-      <img src="./photo/sport4.jpg">
-    </div>
-
+    <div class="card image-relative">
+      <img class="image" src="./photo/sport4.jpg">
+      <img class="image" src="./photo/sport5.jpg">
+      <div class="overlay">
+      <h2>TextTextTextTextTextText</h2>
+      </div>
+      </div>
       <p class="text31">
         Было собрано 1750 гривен и деньги уже перечислены в проект! Мы благодарим всех, кто пришел, узнал о нас немного, поспрашивал после тренировки. И благодарим Елена, ее мужа Сергея и Александра Асланова за эту возможность — быть здоровыми и помогать!
     </p>
