--- a/Галерея/index.html
+++ b/Галерея/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Галерея</title>
+  <link rel="icon" href="photo/Logo.png"> 
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -42,45 +43,22 @@
       </div>
     </nav>
   </div>
+
+  <!--Коньтент-->
+  <div>
+  <div class='console-container'><span id='text'></span>
+    <div class='console-underscore' id='console'>&#95;
+    </div></div>
+</div>
+    <script src="main.js"></script>
  
-
-<!--Кохтент-->
-
-<div class="container">
-  <div class="main"> 
-    <p>Хотите стать волонтером?</p>
+  <div class="block3">
+    <img class="gal1" src="photo/gal1.jpg">
+    <img class="gal2" src="photo/gal2.jpg">
+    <img class="gal3" src="photo/gal3.jpg">
   </div>
-</div>
- 
-<script src="main.js"></script>
-<div class="block2">
-<img src="photo/old1.jpg">
-<img src="photo/old2.jpg">
-<img src="photo/old3.jpg">
-<img src="photo/old4.jpg">
-<img src="photo/old5.jpg">
-<img src="photo/old6.jpg">
-<img src="photo/old7.jpg">
-<img src="photo/old8.jpg">
-<img src="photo/old9.jpg">
-<img src="photo/old10.jpg">
-</div>
-<div class="block1/1">
-  <p class="trhee">
-Ста
-  </p>
-  <img src="photo/old11.jpg">
-  <p class="trh">
- рич   
-  </p>
-  <img src="photo/old12.jpg">
-  <p class="trhe">
-    ки
-  </p>
-</div>
-<!--Футер-->
-
-  <footer>
+<!--конец-->
+<footer>
     <div class="block_img">
       <img src="photo/logo_2.png">
     </div>
