--- a/sob1_eng.html
+++ b/sob1_eng.html
@@ -90,7 +90,7 @@ The path of a social project began «Старенькі». The basic principles 
 
 <div class="ul"></div>
 
-<p id='demo' class='demo'>recieved <!--3-->winning prize: #free room in a happy hotel</p>
+<p id='demo' class='demo'>gained <!--3-->winning prize: #free room in a happy hotel</p>
 <button type='button'>
   <p class="p">The entire amount of donations in 100% of the amount goes to the purchase
      products and basic household chemicals to our oldies
