--- a/sob2_ua.html
+++ b/sob2_ua.html
@@ -18,7 +18,7 @@
     <div class="content">
      <div class="logo"><a href="#"><img class="logph" src="foto/logo/Logo.png"></a></div>
         <ul class="links">
-          <li class="hover"><a href="#">Главна</a></li>
+          <li class="hover"><a href="#">Головна</a></li>
           <li class="hover"><a href="#">Про нас</a></li>
           <li class="hover"><a href="#">ЧаВо</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
@@ -28,7 +28,7 @@
           <li>
             <a href="#" class="desktop-link">Мови</a>
             <input type="checkbox" id="show-features">
-            <label for="show-features">Features</label>
+            <label for="show-features">Особливості</label>
             <ul>
               <li><a href="#">Українська</a></li>
               <li><a href="#">Русский</a></li>
