--- a/Галерея/index.html
+++ b/Галерея/index.html
@@ -52,6 +52,29 @@
 </div>
     <script src="main.js"></script>
  
+  <section class="scroll-container">
+    <div class="scroll-element js-scroll slide-left">
+      <img class="img1" src="photo/old1.jpg " alt="">
+      <img class="img1" src="photo/old2.jpg " alt="">
+      <img class="img1" src="photo/old3.jpg " alt="">
+      <img class="img1" src="photo/old4.jpg " alt="">
+      <img class="img1" src="photo/old5.jpg " alt="">
+      <img class="img1" src="photo/old6.jpg " alt="">
+      
+   
+  </section>
+  <section class="scroll-container">
+    <div class="scroll-element js-scroll slide-right">
+      <img class="img1" src="photo/old7.jpg " alt="">
+      <img class="img1" src="photo/old8.jpg " alt="">
+      <img class="img1" src="photo/old9.jpg " alt="">
+      <img class="img1" src="photo/old10.jpg " alt="">
+      <img class="img1" src="photo/old11.jpg " alt="">
+      <img class="img1" src="photo/old12.jpg " alt="">
+    </div>
+  
+  </section>
+  <script src="./script.js"></script>
   <div class="block3">
     <img class="gal1" src="photo/gal1.jpg">
     <img class="gal2" src="photo/gal2.jpg">
