--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Галерея</title>
-  <link rel="icon" href="photo/Logo.png"> 
-  <link rel="stylesheet" href="style.css">
-
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>About us_ru</title>
+	<link rel="stylesheet" type="text/css" href="About us.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body>
-  <div class="menu">
+	  <div class="menu">
     <nav>
       <input type="checkbox" id="show-search">
       <input type="checkbox" id="show-menu">
       <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
 
     <div class="content">
-     <div class="logo"><a href="#"><img class="logph" src="photo/Logo.png"></a></div>
+     <div class="logo"><a href="#"><img class="logph" src="foto/logo/Logo.png"></a></div>
         <ul class="links">
           <li class="hover"><a href="#">Главная</a></li>
-          <li class="hover"><a href="#">О нас</a></li>
+          <li class="hover_1"><a href="#">О нас</a></li>
           <li class="hover"><a href="#">ЧаВо</a></li>
           <li class="hover"><a href="#">Галерея</a></li>
           <li class="hover"><a href="#">Контакты</a></li>
@@ -44,46 +42,402 @@
     </nav>
   </div>
 
-  <!--Коньтент-->
-  <div>
-  <div class='console-container'><span id='text'></span>
-    <div class='console-underscore' id='console'>&#95;
-    </div></div>
-</div>
-    <script src="main.js"></script>
- 
-  <section class="scroll-container">
-    <div class="scroll-element js-scroll slide-left">
-      <img class="img1" src="photo/old1.jpg " alt="">
-      <img class="img1" src="photo/old2.jpg " alt="">
-      <img class="img1" src="photo/old3.jpg " alt="">
-      <img class="img1" src="photo/old4.jpg " alt="">
-      <img class="img1" src="photo/old5.jpg " alt="">
-      <img class="img1" src="photo/old6.jpg " alt="">
-      
-   
-  </section>
-  <section class="scroll-container">
-    <div class="scroll-element js-scroll slide-right">
-      <img class="img1" src="photo/old7.jpg " alt="">
-      <img class="img1" src="photo/old8.jpg " alt="">
-      <img class="img1" src="photo/old9.jpg " alt="">
-      <img class="img1" src="photo/old10.jpg " alt="">
-      <img class="img1" src="photo/old11.jpg " alt="">
-      <img class="img1" src="photo/old12.jpg " alt="">
+
+
+
+  <header>
+      <div class="video">
+         <img src="foto/maxresdefault.jpg">
+      </div>
+<!--
+      <div class="p">
+        <p class="p_1">Идеи и</p>
+        <p class="p_2">истории</p>
+        <p class="p_3">фонда Starenki</p>
+      </div>-->
+</header>
+
+
+
+
+
+<!--ошибка-->
+    <div class="block_button">
+        <a class="buttona" href="#img1_video">
+          <img src="foto/декор/button.png">
+        </a>
+        <a href="#" class="lightbox" id="img1_video">
+           <span>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/FEqx1sEb-9g?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <span>
+        </a>
     </div>
-  
-  </section>
-  <script src="./script.js"></script>
-  <div class="block3">
-    <img class="gal1" src="photo/gal1.jpg">
-    <img class="gal2" src="photo/gal2.jpg">
-    <img class="gal3" src="photo/gal3.jpg">
+
+
+
+  <p id='demo' class="demo">получен навык: #привычка находить навыки</p>
+  <button class="button" type='button'><img src="foto/декор/голубой.png"></button>
+
+
+  <main>
+    <div class="first_block">
+      <div class="yellow"></div>
+      <div class="p_text">
+         <p><strong>наша команда</strong></p>
+      </div>
+    </div>
+
+    <div class="second_block">
+      <div class="img_for_two_blocks">
+        
+        <div class="img_1">
+          <img src="foto/декор/зеленный круг.png" class="layer" data-speed="-5">
+        </div>
+
+        <div class="img_2">
+          <img src="foto/декор/фиол.png"  class="layer" data-speed="-2">
+        </div>
+
+        <div class="img_3">
+          <img src="foto/декор/голубой круг.png" class="layer" data-speed="-10">
+        </div>
+
+        <div class="img_4">
+          <img src="foto/декор/точки.png" class="layer" data-speed="2">
+        </div>
+
+
+        <div class="img_6">
+          <img src="foto/декор/жолтый.png" class="layer" data-speed="-1">
+        </div>
+      </div>
+
+      <div class="feol" id="feol"></div>
+<!--first start-->
+      <div class="info_block">
+
+        <div class="first">
+          <img class="img_1" src="foto/people/1 - Ирина Бараненко.png">
+          <a href="https://www.facebook.com/Iryna.A.Baranenko"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <div class="name_first">
+            <p class="old">имя</p>
+            <p class="new">Ирина Бараненко</p>
+          </div>
+        </div>
+<!--second start-->
+        <div class="second">
+            <img class="img_1" src="foto/people/2 -  Анна Верещак.png">
+            <a href="#feol"><img class="img_2" src="foto/end/facebook_1.png"></a>
+            <div class="name_second">
+              <p class="old">имя</p>
+              <p class="new">Анна Верещак</p>
+            </div>
+          </div>
+<!--third-->
+        <div class="third">
+          <img class="img_1" src="foto/people/3- Юлия Фитуни.png">
+          <a href="https://www.facebook.com/julia.fituny"><img class="img_2" src="foto/end/facebook_1.png"></a>
+           <div class="name_third">
+             <p class="old">имя</p>
+             <p class="new">Юлия Фитуни</p>
+           </div>
+        </div>
+<!--fourth-->
+        <div class="fourth">
+          <img class="img_1" src="foto/people/4 -  Варвара Тертычная.png">
+          <a href="https://www.facebook.com/varvara.serdiukova"><img class="img_2" src="foto/end/facebook_1.png"></a>
+           <div class="name_fourth">
+             <p class="old">имя</p>
+             <p class="new">Варвара Тертычная</p>
+           </div>
+        </div>
+<!--fifth-->
+        <div class="fifth">
+          <img class="img_1" src="foto/people/5 - Юля Таранцова.png">
+          <a href="https://www.facebook.com/profile.php?id=100004873320449"><img class="img_2" src="foto/end/facebook_1.png"></a>
+           <div class="name_fifth">
+             <p class="old">имя</p>
+             <p class="new">Юля Таранцова</p>
+           </div>
+        </div>
+<!--sixth-->
+        <div class="sixth">
+          <img class="img_1" src="foto/people/6 - Надежда Демидова.png">
+          <a href="https://www.facebook.com/nadin.rexther"><img class="img_2" src="foto/end/facebook_1.png"></a>
+           <div class="name_sixth">
+             <p class="old">имя</p>
+             <p class="new">Надежда Демидова</p>
+           </div>
+        </div>
+<!--seventh-->
+        <div class="seventh">
+          <img class="img_1" src="foto/people/7 - Маша Новокщенова.png">
+          <a href="https://www.facebook.com/mary.novokshchenova"><img class="img_2" src="foto/end/facebook_1.png"></a>
+           <div class="name_seventh">
+             <p class="old">имя</p>
+             <p class="new">Маша Новокщенова</p>
+           </div>
+        </div>
+<!--eighth-->
+        <div class="eighth">
+          <img class="img_1" src="foto/people/8 - Анастасия Кистенева.png">
+          <a href="#feol"><img class="img_2" src="foto/end/facebook_1.png"></a>
+           <div class="name_eighth">
+             <p class="old">имя</p>
+             <p class="new">Анастасия Кистенева</p>
+           </div>
+        </div>
+      </div>
+    </div>
+
+<!--block_with_animate-->
+<div class="animation_with_frog">
+      <div class="anim_text">
+        <div onclick="myFunction()" id="toggle">
+          <p>Ранго:'тут ничего нет'</p>
+        </div>
+        <div class="triangle"></div>
+      </div>
+</div>
+
+
+    <div class="y-1">
+      <img class="y-1-1" src="foto/декор/жолтый.png">
+      <img class="y-1-2 layer" src="foto/декор/зеленный круг.png" data-speed="-4">
+    </div>
+    <div class="y-2">
+      <img class="y-2-1" src="foto/декор/жолтый.png">
+      <img class="y-2-2 layer" src="foto/декор/синий.png" data-speed="-2">
+    </div>
+
+      <div class="end_feol">
+        <p>получен Топ Сикрет навык: #доброта как у дедушки Камадзи</p>
+      </div>
+  </main>
+
+<!--orange_block_start-->
+  <nav class="orange_block">
+    <div class="first_orange_block"></div>
+
+    <div class="second_orange_block">
+      <p class="p1_ob">Волонтеры</p>
+      <p class="p2_ob">и ты
+                      <p class="p2_ob_one">тоже</p>
+                      <p class="p2_ob_two">можешь</p>
+                      <p class="p2_ob_three">стать</p>
+                      <p class="p2_ob_four">одним</p>
+                      <p class="p2_ob_five">из нас</p></p>
+    </div>
+
+    <div class="img_ob">
+      <img src="foto/декор/синий.png">
+      <p>)</p>
+    </div>
+  </nav>
+
+
+<nav class="blue_block">
+  <div class="background">
+    <img class="background1" src="foto/декор/линии.png">
+    <img class="background2" src="foto/декор/линии.png">
   </div>
+<!--first_block_foto-->
+  <div class="block_foto1">
+    <div class="first_block_foto1">
+      <img class="img1_foto1" src="foto/Волонтеры/img_1.png">
+      <img class="img2_foto1" src="foto/декор/кружок.png">
+    </div>
+    <div class="second_block_foto1">
+      <img class="img3_foto1" src="foto/Волонтеры/img_2.png">
+      <img class="img4_foto1 layer" src="foto/декор/синий.png" data-speed="5">
+    </div>
+    <div class="third_block_foto1">
+      <img class="img5_foto1" src="foto/Волонтеры/img_3.png">
+      <img id="img6_foto1" class="layer" data-speed="-5" src="foto/декор/точки.png">
+    </div>
+  </div>
+<!--second_block_foto-->
+  <div class="block_foto2">
+    <div class="first_block_foto2">
+      <img class="img7_foto2" src="foto/Волонтеры/img_4.png">
+      <img class="img8_foto2" src="foto/декор/фиол.png">
+    </div>
+
+    <div class="second_block_foto2">
+      <img class="img9_foto2" src="foto/Волонтеры/img_5.png">
+    </div>
+
+    <div class="third_block_foto2">
+      <img class="img10_foto2" src="foto/Волонтеры/img_6.png">
+      <img class="img11_foto2" src="foto/декор/жолтый.png">
+    </div>
+
+    <div class="fourth_block_foto2">
+      <img class="img12_foto2" src="foto/Волонтеры/img_7.png">
+      <img class="img13_foto2" src="foto/декор/голубой круг.png">
+    </div>
+  </div>
+
+
+
+
+<!--third_block_foto-->
+  <div class="block_foto3">
+    <div class="first_block_foto3">
+      <img class="img14_foto3" src="foto/Волонтеры/img_8.png">
+    </div>
+
+    <div class="second_block_foto3">
+      <img class="img15_foto3" src="foto/Волонтеры/img_9.png">
+    </div>
+
+    <div class="third_block_foto3">
+      <img class="img16_foto3" src="foto/Волонтеры/img_10.png">
+      <img id="img17_foto3" class="layer" data-speed="-3" src="foto/декор/жолтый.png">
+
+    </div>
+  </div>
+</nav>
+
+
+<div class="last_block_with_voloters">
+    <p class="start"><strong>Люди которые отличились среди волонтеров</strong></p>
+
+    <div class="first_people">
+      <img class="img" src="foto/people/Денис Кириченко.png">
+      <div class="general_a">
+        <a class="link_first" href="https://www.facebook.com/denkiri"><img src="foto/logotip_end/facebook.png"></a>
+        <a class="link_second" href="https://www.facebook.com/denkiri"><p>Денис Кириченко</p></a>
+      </div>
+    </div>
+
+    <div class="second_people">
+      <img class="img" src="foto/people/Шоира Хидирова.png">
+      <div class="general_a">
+        <a class="link_first" href="https://www.facebook.com/khidirova.shoira"><img src="foto/logotip_end/facebook.png"></a>
+        <a class="link_second" href="https://www.facebook.com/khidirova.shoira"><p>Шоира Хидирова</p></a>
+      </div>
+    </div>
+
+    <div class="third_people">
+      <img class="img" src="foto/people/Марина Шиянь.png">
+      <div class="general_a">
+        <a class="link_first" href="https://www.facebook.com/profile.php?id=1369667761&fref=gs&dti=311038399306328&hc_location=group_dialog"><img src="foto/logotip_end/facebook.png"></a>
+        <a class="link_second" href="https://www.facebook.com/profile.php?id=1369667761&fref=gs&dti=311038399306328&hc_location=group_dialog"><p>Марина Шиянь</p></a>
+      </div>
+    </div>
+
+    <div class="ford_people">
+      <img class="img" src="foto/people/Александра Барская.png">
+      <div class="general_a">
+        <a class="link_first" href="https://www.facebook.com/alexandra.barskaya?fref=gm&dti=311038399306328&hc_location=group_dialog"><img src="foto/logotip_end/facebook.png"></a>
+        <a class="link_second" href="https://www.facebook.com/alexandra.barskaya?fref=gm&dti=311038399306328&hc_location=group_dialog"><p>Александра Барская</p></a>
+      </div>
+    </div>
+
+  </div>
+
+
+
+<!--black_block_start-->
+<nav class="black_block">
+  <div class="start">
+    <img class="start1" src="foto/декор/triangle.png">
+    <img class="start2" src="foto/декор/triangle.png">
+    <img class="start3" src="foto/декор/triangle.png">
+  </div>
+
+<div class="patrons">
+  <p>
+    Наши меценаты
+  </p>
+</div>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="ih-item square effect4"><a href="#">
+        <div class="img"><img src="foto/logotip_end/AgroTalks.png" alt="img"></div>
+        <div class="mask1"></div>
+        <div class="mask2"></div>
+        <div class="info">
+          <p>AgroTalks</p>
+        </div></a></div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="ih-item square effect41"><a href="#">
+        <div class="img"><img src="foto/logotip_end/404.png" alt="img"></div>
+        <div class="mask1"></div>
+        <div class="mask2"></div>
+        <div class="info">
+          <p>получен навык: #404</p>
+        </div></a></div>
+  </div>
+</div>
+
+
+
+
+  <p class="text_for_black_block">
+    <a href="https://www.youtube.com/watch?v=bP1vQpEWwxE">получен навык: #твоего света хватит на всех</a>
+    <svg>
+      <filter id="fire">
+        <feTurbulence id="turbulence" baseFrequency="0.1 0.1"
+        numOctaves="2" seed="3">
+          <animate attributeName="baseFrequency" dur="20s"
+          values="0.1 0.1;0.50 0.1" repeatCount="indefinite"></animate>
+         </feTurbulence>
+        <feDisplacementMap in="SourceGraphic" scale="2"></feDisplacementMap>
+      </filter>
+    </svg>
+  </p>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="ih-item square effect42"><a href="#">
+        <div class="img"><img src="foto/logotip_end/PayMaxi.png" alt="img"></div>
+        <div class="mask1"></div>
+        <div class="mask2"></div>
+        <div class="info">
+          <p>PayMaxi</p>
+        </div></a></div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="ih-item square effect43"><a href="#">
+        <div class="img"><img src="foto/logotip_end/Агроэкология.png" alt="img"></div>
+        <div class="mask1"></div>
+        <div class="mask2"></div>
+        <div class="info">
+          <p>Агроэкология</p>
+        </div></a></div>
+  </div>
+</div>
+
+
+
+</nav>
+
+<!--black_block_end-->
+
+
+
+
+
+
+
+
+
+
+
 <!--конец-->
 <footer>
     <div class="block_img">
-      <img src="photo/logo_2.png">
+      <img src="foto/logo/logo_2.png">
     </div>
 
     <div class="text">
@@ -120,35 +474,35 @@
          </div>
 
       <div class="block_for_adress">
-        <p class="adress"><a href="">Украина, Киев, ул. Мельникова, 12</a></p>
+        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Украина, Киев, ул. Мельникова, 12</a></p>
         <p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
         <div class="block_with_img_link">
-          <a href="https://www.instagram.com/starenki.help/"><img src="photo/instagram_1.png" class="instagram"></a>
-          <a href="https://www.facebook.com/starenki/"><img src="photo/facebook_1.png" class="facebook"></a>
-          <a href="https://t.me/starenki"><img src="photo/telega_1.png" class="telega"></a>
+          <a href="https://www.instagram.com/starenki.help/"><img src="foto/insta/instagram_1.png" class="instagram"></a>
+          <a href="https://www.facebook.com/starenki/"><img src="foto/insta/facebook_1.png" class="facebook"></a>
+          <a href="https://t.me/starenki"><img src="foto/insta/telega_1.png" class="telega"></a>
 
               <div class="gmail_youtube">
-                <a href="mailto:help@starenki.com.ua"><img src="photo/gamail_1.png" class="gmail"></a>
-                <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="photo/youtube_1.png" class="youtube"></a>
+                <a href="mailto:help@starenki.com.ua"><img src="foto/insta/gamail_1.png" class="gmail"></a>
+                <a href="https://www.youtube.com/channel/UCWxv5fXOMh0UQlPbz18bEXA"><img src="foto/insta/youtube_1.png" class="youtube"></a>
               </div>
         </div>
 
         <div class="block_with_img">
           <div  class="Uk">
-            <a href=""><img src="photo/Ukraine.png" class="uk"></a>
+            <a href=""><img src="foto/flag/Ukraine.png" class="uk"></a>
           </div>
           <div class="Ra">
-            <a href="contacts_ru.html"><img src="photo/rassin.png" class="ra"></a>
+            <a href="contacts_ru.html"><img src="foto/flag/rassin.png" class="ra"></a>
           </div>
           <div class="Usa">
-            <a href=""><img src="photo/usa.jpg" class="usa"></a>
+            <a href=""><img src="foto/flag/usa.jpg" class="usa"></a>
           </div>
           <div class="Fr">
-            <a href=""><img src="photo/farance.jpg" class="fr"></a>
+            <a href=""><img src="foto/flag/farance.jpg" class="fr"></a>
           </div>
           <div class="Ch">
-            <a href=""><img src="photo/China.jpg" class="ch"></a>
+            <a href=""><img src="foto/flag/China.jpg" class="ch"></a>
           </div>
         </div>
       </div>
@@ -161,34 +515,36 @@
 
       <div class="insta">
         <a href="https://www.instagram.com/cheater666_programist/">
-          <img src="photo/instagram_black.png">
+          <img src="foto/insta/instagram_black.png">
         </a>
       </div>
 
       <div class="telega_oleksandr">
-        <a href="https://web.telegram.org/#/im?p=@chivrig">
-          <img src="photo/telega_black.png">
+        <a href="https://web.telegram.org/#/im?p=@oleksandr">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
 
       <div class="telega_Aahzmandiuss">
         <a href="https://web.telegram.org/#/im?p=@Aahzmandiuss">
-          <img src="photo/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
 
       <div class="telega_Dana">
         <a href="https://web.telegram.org/#/im?p=u854258987_4383190150680909201">
-          <img src="photo/telega_black.png">
+          <img src="foto/insta/telega_black.png">
         </a>
       </div>
      </div>
 
-     <div class="arrow">
-      <a href="">
-        <img src="photo/стрелочка.png">
-      </a>
-     </div>
+      <button class="back-to-top-btn" id="back-to-top-btn">
+        <img class="photo" src="foto/декор/стрелочка.png">
+      </button>
+
    </footer>
+
+
+  <script src="About us.js"></script>
 </body>
 </html>
