--- a/Галерея/index.html
+++ b/Галерея/index.html
@@ -60,6 +60,12 @@
       <img class="img1" src="photo/old4.jpg " alt="">
       <img class="img1" src="photo/old5.jpg " alt="">
       <img class="img1" src="photo/old6.jpg " alt="">
+      <img class="img1" src="photo/old13.png " alt="">
+      <img class="img1" src="photo/old15.png " alt="">
+      <img class="img1" src="photo/old16.png " alt="">
+      <img class="img1" src="photo/old17.png " alt="">
+     
+
       
    
   </section>
@@ -71,6 +77,10 @@
       <img class="img1" src="photo/old10.jpg " alt="">
       <img class="img1" src="photo/old11.jpg " alt="">
       <img class="img1" src="photo/old12.jpg " alt="">
+      <img class="img1" src="photo/old14.png " alt="">
+      <img class="img1" src="photo/old19.png " alt="">
+      <img class="img1" src="photo/old20.png " alt="">
+      <img class="img1" src="photo/old18.png " alt="">
     </div>
   
   </section>
