--- a/Галерея/index.html
+++ b/Галерея/index.html
@@ -84,12 +84,18 @@
     </div>
   
   </section>
+  
+  
+  <section class="scroll-container">
+    <div class="scroll-element js-scroll fade-in">
+      <div class="block3">
+        <img class="gal1" src="photo/gal1.jpg">
+        <img class="gal2" src="photo/gal2.jpg">
+        <img class="gal3" src="photo/gal3.jpg">
+      </div>
+    </div>
+  </section>
   <script src="./script.js"></script>
-  <div class="block3">
-    <img class="gal1" src="photo/gal1.jpg">
-    <img class="gal2" src="photo/gal2.jpg">
-    <img class="gal3" src="photo/gal3.jpg">
-  </div>
 <!--конец-->
 <footer>
     <div class="block_img">
