--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div class="content">
      <div class="logo"><a href="#"><img class="logph" src="foto/logo/Logo.png"></a></div>
         <ul class="links">
-          <li class="hover"><a href="#">Главная</a></li>
-          <li class="hover_1"><a href="#">О нас</a></li>
-          <li class="hover"><a href="#">ЧаВо</a></li>
-          <li class="hover"><a href="#">Галерея</a></li>
-          <li class="hover"><a href="#">Контакты</a></li>
-          <li class="hover"><a href="#">События</a></li>
+          <li class="hover"><a href="#">Principal</a></li>
+          <li class="hover"><a href="#">À propos de nous</a></li>
+          <li class="hover"><a href="#">Galerie</a></li>
+          <li class="hover"><a href="#">Contacts</a></li>
+          <li class="hover"><a href="#">Événements</a></li>
+          <li class="hover"><a href="#">Jeu</a></li>
 <!--выпадающий список-->
           <li>
-            <a href="#" class="desktop-link">Языки</a>
+            <a href="#" class="desktop-link">Langues</a>
             <input type="checkbox" id="show-features">
             <label for="show-features">Features</label>
             <ul>
@@ -47,7 +47,7 @@
 
   <header>
       <div class="video">
-         <img src="foto/maxresdefault.jpg">
+         <img src="foto/vevo.jpg">
       </div>
 <!--
       <div class="p">
@@ -68,14 +68,14 @@
         </a>
         <a href="#" class="lightbox" id="img1_video">
            <span>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/FEqx1sEb-9g?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/U-Z_bZS8t3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <span>
         </a>
     </div>
 
 
 
-  <p id='demo' class="demo">получен навык: #привычка находить навыки</p>
+  <p id='demo' class="demo">compétence acquise: # l'habitude de trouver des compétences</p>
   <button class="button" type='button'><img src="foto/декор/голубой.png"></button>
 
 
@@ -83,7 +83,7 @@
     <div class="first_block">
       <div class="yellow"></div>
       <div class="p_text">
-         <p><strong>наша команда</strong></p>
+         <p><strong>notre équipe</strong></p>
       </div>
     </div>
 
@@ -118,73 +118,73 @@
 
         <div class="first">
           <img class="img_1" src="foto/people/1 - Ирина Бараненко.png">
-          <a href="https://www.facebook.com/Iryna.A.Baranenko"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="https://www.facebook.com/Iryna.A.Baranenko"><img class="img_2" src="foto/insta/facebook_1.png"></a>
           <div class="name_first">
-            <p class="old">имя</p>
-            <p class="new">Ирина Бараненко</p>
+            <p class="old">nom</p>
+            <p class="new">Irina Baranenko</p>
           </div>
         </div>
 <!--second start-->
         <div class="second">
             <img class="img_1" src="foto/people/2 -  Анна Верещак.png">
-            <a href="#feol"><img class="img_2" src="foto/end/facebook_1.png"></a>
+            <a href="#feol"><img class="img_2" src="foto/insta/facebook_1.png"></a>
             <div class="name_second">
-              <p class="old">имя</p>
-              <p class="new">Анна Верещак</p>
+              <p class="old">nom</p>
+              <p class="new">Anna Verechtchak</p>
             </div>
           </div>
 <!--third-->
         <div class="third">
           <img class="img_1" src="foto/people/3- Юлия Фитуни.png">
-          <a href="https://www.facebook.com/julia.fituny"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="https://www.facebook.com/julia.fituny"><img class="img_2" src="foto/insta/facebook_1.png"></a>
            <div class="name_third">
-             <p class="old">имя</p>
-             <p class="new">Юлия Фитуни</p>
+             <p class="old">nom</p>
+             <p class="new">Julia Fituni</p>
            </div>
         </div>
 <!--fourth-->
         <div class="fourth">
           <img class="img_1" src="foto/people/4 -  Варвара Тертычная.png">
-          <a href="https://www.facebook.com/varvara.serdiukova"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="https://www.facebook.com/varvara.serdiukova"><img class="img_2" src="foto/insta/facebook_1.png"></a>
            <div class="name_fourth">
-             <p class="old">имя</p>
-             <p class="new">Варвара Тертычная</p>
+             <p class="old">nom</p>
+             <p class="new">Varvara Tertychnaya</p>
            </div>
         </div>
 <!--fifth-->
         <div class="fifth">
           <img class="img_1" src="foto/people/5 - Юля Таранцова.png">
-          <a href="https://www.facebook.com/profile.php?id=100004873320449"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="https://www.facebook.com/profile.php?id=100004873320449"><img class="img_2" src="foto/insta/facebook_1.png"></a>
            <div class="name_fifth">
-             <p class="old">имя</p>
-             <p class="new">Юля Таранцова</p>
+             <p class="old">nom</p>
+             <p class="new">Yulia Tarantsova</p>
            </div>
         </div>
 <!--sixth-->
         <div class="sixth">
           <img class="img_1" src="foto/people/6 - Надежда Демидова.png">
-          <a href="https://www.facebook.com/nadin.rexther"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="https://www.facebook.com/nadin.rexther"><img class="img_2" src="foto/insta/facebook_1.png"></a>
            <div class="name_sixth">
-             <p class="old">имя</p>
-             <p class="new">Надежда Демидова</p>
+             <p class="old">nom</p>
+             <p class="new">Nadezhda Demidova</p>
            </div>
         </div>
 <!--seventh-->
         <div class="seventh">
           <img class="img_1" src="foto/people/7 - Маша Новокщенова.png">
-          <a href="https://www.facebook.com/mary.novokshchenova"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="https://www.facebook.com/mary.novokshchenova"><img class="img_2" src="foto/insta/facebook_1.png"></a>
            <div class="name_seventh">
-             <p class="old">имя</p>
-             <p class="new">Маша Новокщенова</p>
+             <p class="old">nom</p>
+             <p class="new">Macha Novokchtchenova</p>
            </div>
         </div>
 <!--eighth-->
         <div class="eighth">
           <img class="img_1" src="foto/people/8 - Анастасия Кистенева.png">
-          <a href="#feol"><img class="img_2" src="foto/end/facebook_1.png"></a>
+          <a href="#feol"><img class="img_2" src="foto/insta/facebook_1.png"></a>
            <div class="name_eighth">
-             <p class="old">имя</p>
-             <p class="new">Анастасия Кистенева</p>
+             <p class="old">nom</p>
+             <p class="new">Anastasia Kisteneva</p>
            </div>
         </div>
       </div>
@@ -194,7 +194,7 @@
 <div class="animation_with_frog">
       <div class="anim_text">
         <div onclick="myFunction()" id="toggle">
-          <p>Ранго:'тут ничего нет'</p>
+          <p>Rango: 'il n'y a rien ici'</p>
         </div>
         <div class="triangle"></div>
       </div>
@@ -211,7 +211,7 @@
     </div>
 
       <div class="end_feol">
-        <p>получен Топ Сикрет навык: #доброта как у дедушки Камадзи</p>
+        <p>A reçu la compétence Top Secret: # genre comme grand-père Kamadzi</p>
       </div>
   </main>
 
@@ -220,13 +220,13 @@
     <div class="first_orange_block"></div>
 
     <div class="second_orange_block">
-      <p class="p1_ob">Волонтеры</p>
-      <p class="p2_ob">и ты
-                      <p class="p2_ob_one">тоже</p>
-                      <p class="p2_ob_two">можешь</p>
-                      <p class="p2_ob_three">стать</p>
-                      <p class="p2_ob_four">одним</p>
-                      <p class="p2_ob_five">из нас</p></p>
+      <p class="p1_ob">Bénévoles</p>
+      <p class="p2_ob">et tu
+                      <p class="p2_ob_one">peux</p>
+                      <p class="p2_ob_two">aussi</p>
+                      <p class="p2_ob_three">devenir</p>
+                      <p class="p2_ob_four">l'un</p>
+                      <p class="p2_ob_five">des nôtres</p></p>
     </div>
 
     <div class="img_ob">
@@ -301,13 +301,13 @@
 
 
 <div class="last_block_with_voloters">
-    <p class="start"><strong>Люди которые отличились среди волонтеров</strong></p>
+    <p class="start"><strong>Des gens qui se sont distingués parmi les bénévoles</strong></p>
 
     <div class="first_people">
       <img class="img" src="foto/people/Денис Кириченко.png">
       <div class="general_a">
         <a class="link_first" href="https://www.facebook.com/denkiri"><img src="foto/logotip_end/facebook.png"></a>
-        <a class="link_second" href="https://www.facebook.com/denkiri"><p>Денис Кириченко</p></a>
+        <a class="link_second" href="https://www.facebook.com/denkiri"><p>Denis Kirichenko</p></a>
       </div>
     </div>
 
@@ -315,7 +315,7 @@
       <img class="img" src="foto/people/Шоира Хидирова.png">
       <div class="general_a">
         <a class="link_first" href="https://www.facebook.com/khidirova.shoira"><img src="foto/logotip_end/facebook.png"></a>
-        <a class="link_second" href="https://www.facebook.com/khidirova.shoira"><p>Шоира Хидирова</p></a>
+        <a class="link_second" href="https://www.facebook.com/khidirova.shoira"><p>Shoira Khidirova</p></a>
       </div>
     </div>
 
@@ -323,7 +323,7 @@
       <img class="img" src="foto/people/Марина Шиянь.png">
       <div class="general_a">
         <a class="link_first" href="https://www.facebook.com/profile.php?id=1369667761&fref=gs&dti=311038399306328&hc_location=group_dialog"><img src="foto/logotip_end/facebook.png"></a>
-        <a class="link_second" href="https://www.facebook.com/profile.php?id=1369667761&fref=gs&dti=311038399306328&hc_location=group_dialog"><p>Марина Шиянь</p></a>
+        <a class="link_second" href="https://www.facebook.com/profile.php?id=1369667761&fref=gs&dti=311038399306328&hc_location=group_dialog"><p>Marina Shiyan</p></a>
       </div>
     </div>
 
@@ -331,7 +331,7 @@
       <img class="img" src="foto/people/Александра Барская.png">
       <div class="general_a">
         <a class="link_first" href="https://www.facebook.com/alexandra.barskaya?fref=gm&dti=311038399306328&hc_location=group_dialog"><img src="foto/logotip_end/facebook.png"></a>
-        <a class="link_second" href="https://www.facebook.com/alexandra.barskaya?fref=gm&dti=311038399306328&hc_location=group_dialog"><p>Александра Барская</p></a>
+        <a class="link_second" href="https://www.facebook.com/alexandra.barskaya?fref=gm&dti=311038399306328&hc_location=group_dialog"><p>Alexandra Barskaya</p></a>
       </div>
     </div>
 
@@ -349,7 +349,7 @@
 
 <div class="patrons">
   <p>
-    Наши меценаты
+    Notre clientèle
   </p>
 </div>
 
@@ -372,7 +372,7 @@
         <div class="mask1"></div>
         <div class="mask2"></div>
         <div class="info">
-          <p>получен навык: #404</p>
+          <p>compétence acquise: # 404</p>
         </div></a></div>
   </div>
 </div>
@@ -380,19 +380,19 @@
 
 
 
-  <p class="text_for_black_block">
-    <a href="https://www.youtube.com/watch?v=bP1vQpEWwxE">получен навык: #твоего света хватит на всех</a>
+  <!--<p class="text_for_black_block">
+    <a href="https://www.youtube.com/watch?v=bP1vQpEWwxE">compétence acquise: #votre lumière est suffisante pour tout le monde</a>
     <svg>
       <filter id="fire">
         <feTurbulence id="turbulence" baseFrequency="0.1 0.1"
-        numOctaves="2" seed="3">
+        numOctaves="2" seed="0">
           <animate attributeName="baseFrequency" dur="20s"
           values="0.1 0.1;0.50 0.1" repeatCount="indefinite"></animate>
          </feTurbulence>
         <feDisplacementMap in="SourceGraphic" scale="2"></feDisplacementMap>
       </filter>
     </svg>
-  </p>
+  </p>-->
 
 <div class="row">
   <div class="col-sm-6">
@@ -413,7 +413,7 @@
         <div class="mask1"></div>
         <div class="mask2"></div>
         <div class="info">
-          <p>Агроэкология</p>
+          <p>Agroécologie</p>
         </div></a></div>
   </div>
 </div>
@@ -443,38 +443,38 @@
     <div class="text">
       <div class="block_menu">
          <ul>
-          <li><a href="#" class="help">Помощь</a></li>
-          <li><a href="#">Меню</a></li>
-          <li><a href="#" class="contacts">Контакты и Адрес</a></li>
-          <li><a href="#">Языки</a></li>
+          <li><a href="#" class="help">Aider</a></li>
+          <li><a href="#" class="menu1">Menu</a></li>
+          <li><a href="#" class="contacts">Contacts et adresse</a></li>
+          <li><a href="#" class="languages">Langues</a></li>
          </ul>
       </div>
 
          <div class="block_for_help">
         <ul>
-          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Поддерживать Проект Единоразово</a></li>
-          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Поддерживать Проект Ежемесячно</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640264876280_101898659_46AoC204jpYZdan5he2p">Помогать Ежемесячно</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640115134966_103027107_JQXiehGFVYQkYlGzhOkc">Продукты для стареньких единоразово</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640129544951_106440338_STTbjwcZByPMgtB7ekWN">Продукты для стареньких ежемесячно</a></li>
-          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615639751461470_122359379_OfH8pqtLRS3jd86piA4b">Средство гигиены</a></li>
-          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScAZ0onNui_KC1iSFcEhxrI2ab4CGLouW9S7wab5WzkmRqS3A/viewform">Волонтерство</a></li>
+          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Soutenir le projet une fois</a></li>
+          <li><a href="https://www.liqpay.ua/ru/checkout/card/i9215574650">Projet de soutien mensuel</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640264876280_101898659_46AoC204jpYZdan5he2p">Aide mensuelle</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640115134966_103027107_JQXiehGFVYQkYlGzhOkc">Produits pour les personnes âgées ponctuel</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615640129544951_106440338_STTbjwcZByPMgtB7ekWN">Produits pour les personnes âgées mensuel</a></li>
+          <li><a href="https://www.liqpay.ua/uk/checkout/card/checkout_1615639751461470_122359379_OfH8pqtLRS3jd86piA4b">Produit d'hygiène</a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScAZ0onNui_KC1iSFcEhxrI2ab4CGLouW9S7wab5WzkmRqS3A/viewform">Faire du bénévolat</a></li>
         </ul>
       </div>
 
          <div class="block_for_menu">
         <ul>
-          <li><a href="">Главная</a></li>
-          <li><a href="">О нас</a></li>
-          <li><a href="">ЧаВо</a></li>
-          <li><a href="">Галерея</a></li>
-          <li><a href="contacts_ru.html">Контакты</a></li>
-          <li><a href="">События</a></li>
+          <li><a href="">Principal</a></li>
+          <li><a href="">À propos de nous</a></li>
+          <li><a href="">Galerie</a></li>
+          <li><a href="">Contacts</a></li>
+          <li><a href="contacts_ru.html">Événements</a></li>
+          <li><a href="">Jeu</a></li>
         </ul>
          </div>
 
       <div class="block_for_adress">
-        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Украина, Киев, ул. Мельникова, 12</a></p>
+        <p class="adress"><a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%AE%D1%80%D0%B8%D1%8F+%D0%98%D0%BB%D1%8C%D0%B5%D0%BD%D0%BA%D0%BE,+12,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4651506,30.4772799,19z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce7874db2b63:0xd69ace3b27b8c44c!8m2!3d50.4651506!4d30.4778271?hl=ru">Ukraine, Kiev, st. Melnikova, 12 ans</a></p>
         <p class="amail"><a href="mailto:help@starenki.com.ua">help@starenki.com.ua</a></p>
 
         <div class="block_with_img_link">
